[workspace]
resolver = "2"
members = [
    "packages/*",
    #  Example crates
    "examples/*",
]

[workspace.dependencies]
# Logging
log = { version = "0.4", features = [
    "kv_unstable",
    "std",
    "kv_unstable_serde",
] }
env_logger = "0.10"

# Json Serialize / Deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"

[workspace.metadata.release]
shared-version = true
pre-release-commit-message = "chore(crate): Release {{version}}"
