[package]
name = "agent_client"
version = "0.0.1"
edition = "2021"

[dev-dependencies]

talos_agent =         { path = "../../packages/talos_agent" }
talos_rdkafka_utils = { path = "../../packages/talos_rdkafka_utils" }
examples_support =    { path = "../../packages/examples_support" }

async-channel = { version = "1.8.0" }
async-trait =   { workspace = true }
env_logger =    { workspace = true }
log =           { workspace = true }
rand =          { version = "0.8.5" }
rdkafka =       { version = "0.34.0", features = ["sasl"] }
# rdkafka-sys =   { version = "4.3.0" }
rdkafka-sys =   { version = "4.6.0" }
serde =         { workspace = true }
serde_json =    { workspace = true }
strum =         { version = "0.25", features = ["derive"] }
tokio =         { workspace = true, features = ["full"] }
uuid =          { version = "1.2.2", features = ["v4"] }
time =          { version = "0.3.17" }
