[package]
# [package]
name = "certifier_kafka_pg"
version = "0.3.10"
edition = "2021"
keywords = ["talos"]
description = "Talos Certifier using Kafka and Pg adapters"

[dev-dependencies]
# Logging
log = { workspace = true }
env_logger = { workspace = true }
# Async
tokio = { workspace = true }

# Migration
refinery = { version = "0.8.7", features = ["tokio-postgres"] }

# internal crates
talos_certifier = { path = "../../packages/talos_certifier", version = "0.3.10" }
talos_suffix = { path = "../../packages/talos_suffix", version = "0.3.10" }
talos_certifier_adapters = { path = "../../packages/talos_certifier_adapters", version = "0.3.10" }
talos_common_utils = { path = "../../packages/talos_common_utils", version = "0.3.10" }
talos_rdkafka_utils = { path = "../../packages/talos_rdkafka_utils", version = "0.3.10" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]
