[package]
name = "cohort_banking_example"
version = "0.0.1"
edition = "2021"

[dev-dependencies]

cohort =                   { path = "../../packages/cohort" }
examples_support =         { path = "../../packages/examples_support" }
metrics =                  { path = "../../packages/metrics" }
talos_agent =              { path = "../../packages/talos_agent" }
talos_certifier =          { path = "../../packages/talos_certifier" }
talos_certifier_adapters = { path = "../../packages/talos_certifier_adapters" }
talos_suffix =             { path = "../../packages/talos_suffix" }

async-trait = { workspace = true }
env_logger =  { workspace = true }
log =         { workspace = true }
serde =       { workspace = true }
serde_json =  { workspace = true }
tokio =       { workspace = true, features = ["full"] }

async-channel =     { version = "1.8.0" }
csv =               { version = "1.2.1" }
deadpool-postgres = { version = "0.10" }
rand =              { version = "0.8.5" }
rdkafka =           { version = "0.29.0", features = ["sasl"] }
rdkafka-sys =       { version = "4.3.0" }
rust_decimal =      { version = "1.30.0", features = ["db-tokio-postgres", "serde-with-float"] }
time =              { version = "0.3.17" }
tokio-postgres =    { version = "0.7", features = [ "with-uuid-1", "with-serde_json-1" ] }
uuid =              { version = "1.2.2", features = ["v4"] }