[package]
name = "cohort_replicator_kafka_pg"
version = "0.0.1"
edition = "2021"

[dev-dependencies]
banking_common =            { path = "../../packages/banking_common" }
banking_replicator =        { path = "../../packages/banking_replicator" }
cohort_banking  =           { path = "../../packages/cohort_banking" }
talos_cohort_replicator =   { path = "../../packages/talos_cohort_replicator" }
talos_certifier =           { path = "../../packages/talos_certifier" }
talos_certifier_adapters =  { path = "../../packages/talos_certifier_adapters" }
talos_common_utils =        { path = "../../packages/talos_common_utils" }
talos_rdkafka_utils =       { path = "../../packages/talos_rdkafka_utils" }

async-trait = { workspace = true }
env_logger =  { workspace = true }
log =         { workspace = true }
serde =       { workspace = true }
serde_json =  { workspace = true }
tokio =       { workspace = true, features = ["full"] }

rdkafka =                   { version = "0.34.0", features = ["sasl"] }
rdkafka-sys =               { version = "4.3.0" }
rust_decimal =              { version = "1.30.0", features = ["db-tokio-postgres", "serde-with-float"] }
time =                      { version = "0.3.17" }
tokio-postgres =            { version = "0.7", features = [ "with-uuid-1", "with-serde_json-1" ] }
uuid =                      { version = "1.4.1", features = ["v4"] }