[package]
name = "cohort_replicator_kafka_pg"
version = "0.2.60-beta.0"
edition = "2021"

[dev-dependencies]
banking_common =            { path = "../../packages/banking_common", version = "0.2.60-beta.0" }
banking_replicator =        { path = "../../packages/banking_replicator", version = "0.2.60-beta.0" }
cohort_banking  =           { path = "../../packages/cohort_banking", version = "0.2.60-beta.0" }
talos_cohort_replicator =   { path = "../../packages/talos_cohort_replicator", version = "0.2.60-beta.0" }
talos_certifier =           { path = "../../packages/talos_certifier", version = "0.2.60-beta.0" }
talos_certifier_adapters =  { path = "../../packages/talos_certifier_adapters", version = "0.2.60-beta.0" }
talos_common_utils =        { path = "../../packages/talos_common_utils", version = "0.2.60-beta.0" }
talos_rdkafka_utils =       { path = "../../packages/talos_rdkafka_utils", version = "0.2.60-beta.0" }

async-trait = { workspace = true }
env_logger =  { workspace = true }
log =         { workspace = true }
serde =       { workspace = true }
serde_json =  { workspace = true }
tokio =       { workspace = true, features = ["full"] }

rdkafka = { version = "0.34.0", features = ["sasl"]  }

rust_decimal =              { version = "1.30.0", features = ["db-tokio-postgres", "serde-with-float"] }
time =                      { version = "0.3.17" }
tokio-postgres =            { version = "0.7", features = [ "with-uuid-1", "with-serde_json-1" ] }
uuid =                      { version = "1.4.1", features = ["v4"] }
