[package]
# [package]
name = "messenger_using_kafka"
version = "0.0.1"
edition = "2021"
keywords = ["talos"]
description = "Example on consuming `talos_messenger`"

[dependencies]
# Logging
log = { workspace = true }
env_logger = { workspace = true }
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Kafka
rdkafka = { version = "0.34.0", features = ["sasl"] }

# ahash
ahash = "0.8.3"

# internal crates
talos_certifier = { path = "../../packages/talos_certifier" }
talos_suffix = { path = "../../packages/talos_suffix" }
talos_certifier_adapters = { path = "../../packages/talos_certifier_adapters" }
talos_common_utils = { path = "../../packages/talos_common_utils" }
talos_rdkafka_utils = { path = "../../packages/talos_rdkafka_utils" }
talos_messenger_core = { path = "../../packages/talos_messenger_core" }
talos_messenger_actions = { path = "../../packages/talos_messenger_actions" }
