[package]
# [package]
name = "messenger_using_kafka"
version = "0.2.2-dev"
edition = "2021"
keywords = ["talos"]
description = "Example on consuming `talos_messenger`"

[dependencies]
# Logging
log = { workspace = true }
env_logger = { workspace = true }
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Kafka
rdkafka = { version = "0.34.0", features = ["sasl"] }

# ahash
ahash = "0.8.3"

# internal crates
talos_certifier = { path = "../../packages/talos_certifier", version = "0.2.2-dev" }
talos_suffix = { path = "../../packages/talos_suffix", version = "0.2.2-dev" }
talos_certifier_adapters = { path = "../../packages/talos_certifier_adapters", version = "0.2.2-dev" }
talos_common_utils = { path = "../../packages/talos_common_utils", version = "0.2.2-dev" }
talos_rdkafka_utils = { path = "../../packages/talos_rdkafka_utils", version = "0.2.2-dev" }
talos_messenger_core = { path = "../../packages/talos_messenger_core", version = "0.2.2-dev" }
talos_messenger_actions = { path = "../../packages/talos_messenger_actions", version = "0.2.2-dev" }
